Remove the top triangle graphic from comment field on mobile as it often conflicts with Comment as Guest or Login, etc fixes #523

--- a/app/assets/stylesheets/white_theme/comments.scss
+++ b/app/assets/stylesheets/white_theme/comments.scss
@@ -40,6 +40,11 @@
     border-width: 0 9px 13px 9px;
     border-style: solid;
     border-color: transparent transparent #d7dbdb transparent;
+    @media #{$mobile} {
+      display: none;
+    }
+
+
   }
   .comment_asset {
     background-color: transparent;
